# hw04-Group28

./: LOSC_Event_tutorial.html  Makefile  README.md  contribution_statement.html  contribution_statement.md  markdown-notebooks.html  notebooks.html  requirements.txt  searchindex.js  setup.cfg
.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  environment.pickle  markdown.doctree  notebooks.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/mybook/: intro.doctree
.github/workflows/: book.yml
.gitignore/: environmentGO.yml  test.ipynb
.gitignore/ligotools.egg-info/: SOURCES.txt  requires.txt
.pytest_cache/: README.html
_build/.doctrees/: LOSC_Event_tutorial.doctree  environment.pickle  hw04_description.doctree  intro.doctree  notebooks.doctree
_build/.doctrees/mybook/: markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw04_description.html  intro.html  markdown.html  objects.inv  search.html
_build/html/.doctrees/: README.doctree  intro.doctree  markdown-notebooks.doctree
_build/html/mybook/: markdown-notebooks.html  notebooks.html
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_build/jupyter_execute/mybook/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: README.md  markdown.md
ligotools/: __init__.py  setup.cfg  utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_ligotools.py  test_utils.py
mybook/: _config.yml  intro.html  markdown.html
mybook/_build/.doctrees/: environment.pickle  intro.doctree  markdown.doctree  (+1 more)
(+16 files in other folders)
